# rust-microservice-package-manager

./: .gitignore  Cargo.toml  README.md
config/: microservices-simple.yaml  microservices.yaml
docs/: network-setup.sh  step.txt
src/: main.rs
src/api/: schema.rs
src/command/: process.rs
src/common/: utils.rs
src/config/: read.rs
src/network/: namespace.rs
src/package/: build.rs  create.rs  mod.rs  signature.rs  signing.rs
src/remote/: process.rs
src/websocket/: client.rs  server.rs
src/workflow/: handler.rs
templates/: config-simple.json  config.json
